--- a/Home.css
+++ b/Home.css
@@ -38,14 +38,14 @@
   }
 
   .u-section-1 .u-image-1 {
-    inset: auto;
     width: 940px;
     height: 499px;
-    margin-left: 0;
+    margin-top: 57px;
+    margin-left: -50px;
   }
 
   .u-section-1 .u-image-2 {
-    margin-top: -460px;
+    margin-top: -516px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -55,20 +55,23 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 343px;
+    min-height: 475px;
   }
 
   .u-section-1 .u-image-1 {
+    inset: auto;
     width: 720px;
     height: 382px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-image-2 {
-    margin-top: -343px;
+    margin-top: -399px;
+    margin-left: 74px;
   }
 
   .u-section-1 .u-btn-1 {
-    font-size: 1.25rem;
+    font-size: 1.875rem;
   }
 }
 
@@ -83,7 +86,8 @@
   }
 
   .u-section-1 .u-image-2 {
-    margin-top: -248px;
+    margin-top: -304px;
+    margin-left: 40px;
   }
 }
 
@@ -100,7 +104,8 @@
   .u-section-1 .u-image-2 {
     width: 340px;
     height: 204px;
-    margin-top: -142px;
+    margin-top: -198px;
+    margin-left: 0;
   }
 }
 
