--- a/Home.css
+++ b/Home.css
@@ -8,15 +8,15 @@
 }
 
 .u-section-1 .u-image-1 {
-  width: 848px;
-  height: 704px;
-  margin: 0 auto 0 453px;
+  width: 1139px;
+  height: 604px;
+  margin: 0 auto 0 378px;
 }
 
 .u-section-1 .u-image-2 {
   width: 515px;
   height: 300px;
-  margin: -670px auto 0;
+  margin: -570px auto 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -34,24 +34,28 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 332px;
+    min-height: 226px;
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: -8px;
-    margin-left: 92px;
+    width: 940px;
+    height: 498px;
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-image-2 {
+    margin-top: -464px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 148px;
+    min-height: 109px;
   }
 
   .u-section-1 .u-image-1 {
     width: 720px;
-    height: 598px;
-    margin-left: 0;
+    height: 381px;
   }
 
   .u-section-1 .u-image-2 {
@@ -60,9 +64,13 @@
 }
 
 @media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 14px;
+  }
+
   .u-section-1 .u-image-1 {
     width: 540px;
-    height: 449px;
+    height: 286px;
   }
 
   .u-section-1 .u-image-2 {
@@ -73,7 +81,7 @@
 @media (max-width: 575px) {
   .u-section-1 .u-image-1 {
     width: 340px;
-    height: 283px;
+    height: 180px;
   }
 
   .u-section-1 .u-image-2 {
