--- a/Home.css
+++ b/Home.css
@@ -16,6 +16,8 @@
 .u-section-1 .u-image-2 {
   width: 515px;
   height: 300px;
+  transition-duration: 0.5s;
+  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px);
   margin: -570px auto 0;
 }
 
@@ -28,8 +30,37 @@
   --radius: 50px;
   box-shadow: -2px 2px 8px 4px rgba(0,0,0,0.4);
   background-image: none;
-  margin: 11px auto 60px;
+  margin: 11px auto 0;
   padding: 21px 30px 22px 29px;
+}
+
+.u-section-1 .u-image-3 {
+  width: 87px;
+  height: 87px;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  transition-duration: 0.5s;
+  --radius: 50px;
+  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px);
+  margin: 138px auto 0 -33px;
+}
+
+.u-section-1 .u-image-4 {
+  width: 94px;
+  height: 94px;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  transition-duration: 0.5s;
+  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px);
+  margin: -88px auto 0 66px;
+}
+
+.u-section-1 .u-image-5 {
+  width: 104px;
+  height: 104px;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  transition-duration: 0.5s;
+  --radius: 50px;
+  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px);
+  margin: -99px auto 7px 171px;
 }
 
 @media (max-width: 1199px) {
@@ -59,7 +90,7 @@
   }
 
   .u-section-1 .u-image-2 {
-    margin-top: -591px;
+    margin-top: -347px;
   }
 }
 
@@ -74,7 +105,7 @@
   }
 
   .u-section-1 .u-image-2 {
-    margin-top: -442px;
+    margin-top: -252px;
   }
 }
 
@@ -87,7 +118,7 @@
   .u-section-1 .u-image-2 {
     width: 340px;
     height: 198px;
-    margin-top: -276px;
+    margin-top: -146px;
   }
 }
 
@@ -103,6 +134,70 @@
 
 .u-section-1 .u-btn-1.u-btn-1.u-btn-1.hover {
   transform: scale(1.05) !important;
+}
+
+.u-section-1 .u-image-3,
+.u-section-1 .u-image-3:before,
+.u-section-1 .u-image-3 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
+}
+
+.u-section-1 .u-image-3.u-image-3.u-image-3:hover {
+  transform: scale(1.1) translateX(0px) translateY(0px) !important;
+}
+
+.u-section-1 .u-image-3.u-image-3.u-image-3.hover {
+  transform: scale(1.1) translateX(0px) translateY(0px) !important;
+}
+
+.u-container-layout:hover > .u-section-1 .u-image-3 {
+  opacity: 1 !important;
+}
+
+.u-container-layout.hover > .u-section-1 .u-image-3 {
+  opacity: 1 !important;
+}
+
+.u-section-1 .u-image-4,
+.u-section-1 .u-image-4:before,
+.u-section-1 .u-image-4 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
+}
+
+.u-section-1 .u-image-4.u-image-4.u-image-4:hover {
+  transform: scale(1.04) translateX(0px) translateY(0px) !important;
+}
+
+.u-section-1 .u-image-4.u-image-4.u-image-4.hover {
+  transform: scale(1.04) translateX(0px) translateY(0px) !important;
+}
+
+.u-section-1 .u-image-5,
+.u-section-1 .u-image-5:before,
+.u-section-1 .u-image-5 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
+}
+
+.u-section-1 .u-image-5.u-image-5.u-image-5:hover {
+  transform: scale(1.04) translateX(0px) translateY(0px) !important;
+}
+
+.u-section-1 .u-image-5.u-image-5.u-image-5.hover {
+  transform: scale(1.04) translateX(0px) translateY(0px) !important;
+}
+
+.u-section-1 .u-image-2,
+.u-section-1 .u-image-2:before,
+.u-section-1 .u-image-2 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
+}
+
+.u-section-1 .u-image-2.u-image-2.u-image-2:hover {
+  transform: scale(1.04) translateX(0px) translateY(0px) !important;
+}
+
+.u-section-1 .u-image-2.u-image-2.u-image-2.hover {
+  transform: scale(1.04) translateX(0px) translateY(0px) !important;
 } .u-section-2 {
   background-image: none;
   min-height: 93px;
@@ -393,7 +488,6 @@
 
   .u-section-3 .u-list-1 {
     margin-top: 28px;
-    margin-bottom: 49px;
   }
 
   .u-section-3 .u-repeater-1 {
@@ -580,9 +674,12 @@
     min-height: 1291px;
   }
 
+  .u-section-3 .u-btn-1 {
+    margin-top: 158px;
+  }
+
   .u-section-3 .u-list-1 {
     margin-top: 22px;
-    margin-bottom: 33px;
   }
 
   .u-section-3 .u-repeater-1 {
@@ -1318,7 +1415,7 @@
   height: 64px;
   width: 64px;
   margin: 0 auto 0 0;
-  padding: 3px;
+  padding: 6px;
 }
 
 .u-section-5 .u-text-7 {
@@ -1389,10 +1486,6 @@
 
   .u-section-5 .u-container-layout-4 {
     padding-bottom: 7px;
-  }
-
-  .u-section-5 .u-icon-4 {
-    padding: 6px;
   }
 }
 
