--- a/Home.css
+++ b/Home.css
@@ -279,10 +279,7 @@
   transform: scale(1.02) translateX(0px) translateY(0px) !important;
 } .u-section-3 {
   background-image: none;
-}
-
-.u-section-3 .u-sheet-1 {
-  min-height: 529px;
+  min-height: 593px;
 }
 
 .u-section-3 .u-btn-1 {
@@ -298,8 +295,8 @@
 }
 
 .u-section-3 .u-list-1 {
-  margin-top: 22px;
-  margin-bottom: 60px;
+  width: 1920px;
+  margin: 22px auto 0;
 }
 
 .u-section-3 .u-repeater-1 {
@@ -477,17 +474,36 @@
   margin: -71px 0 0;
 }
 
+.u-section-3 .u-btn-2 {
+  --radius: 50px;
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-family: Splatfont;
+  font-size: 1.375rem;
+  margin: 24px auto 0 calc(((100% - 1920px) / 2)  + 831px);
+  padding: 10px 34px 10px 32px;
+}
+
+.u-section-3 .u-btn-3 {
+  --radius: 50px;
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-family: Splatfont;
+  font-size: 1.375rem;
+  margin: -55px auto 0 calc(((100% - 1920px) / 2)  + 160px);
+  padding: 10px 34px 10px 32px;
+}
+
+.u-section-3 .u-shape-1 {
+  height: 15px;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin-top: 25px;
+  margin-bottom: 5px;
+}
+
 @media (max-width: 1199px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 553px;
-  }
-
-  .u-section-3 .u-btn-1 {
-    margin-top: 33px;
-  }
-
   .u-section-3 .u-list-1 {
-    margin-top: 28px;
+    width: 940px;
   }
 
   .u-section-3 .u-repeater-1 {
@@ -496,49 +512,47 @@
 
   .u-section-3 .u-image-1 {
     --radius: 10px;
-    margin-top: -86px;
-    margin-right: 33px;
-  }
-
-  .u-section-3 .u-text-6 {
-    margin-top: 19px;
   }
 
   .u-section-3 .u-image-2 {
     --radius: 10px;
-    margin-top: -86px;
-    margin-right: 33px;
-  }
-
-  .u-section-3 .u-text-12 {
-    margin-top: 19px;
   }
 
   .u-section-3 .u-image-3 {
     --radius: 10px;
-    margin-top: -86px;
-    margin-right: 33px;
   }
 
-  .u-section-3 .u-text-18 {
-    margin-top: 19px;
+  .u-section-3 .u-btn-2 {
+    margin-left: calc(((100% - 940px) / 2));
+  }
+
+  .u-section-3 .u-btn-3 {
+    margin-left: calc(((100% - 940px) / 2));
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 326px;
+  .u-section-3 .u-list-1 {
+    width: 720px;
   }
 
   .u-section-3 .u-repeater-1 {
     grid-template-columns: repeat(2, calc(50% - 15px));
     min-height: 933px;
   }
+
+  .u-section-3 .u-btn-2 {
+    margin-left: calc(((100% - 720px) / 2));
+  }
+
+  .u-section-3 .u-btn-3 {
+    margin-left: calc(((100% - 720px) / 2));
+  }
 }
 
 @media (max-width: 767px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 245px;
+  .u-section-3 .u-list-1 {
+    width: 540px;
   }
 
   .u-section-3 .u-repeater-1 {
@@ -550,81 +564,9 @@
     padding-right: 0;
   }
 
-  .u-section-3 .u-icon-1 {
-    margin-left: 26px;
-  }
-
-  .u-section-3 .u-text-1 {
-    width: auto;
-    margin-left: 20px;
-  }
-
-  .u-section-3 .u-text-2 {
-    width: auto;
-    margin-right: -6px;
-    margin-left: 26px;
-  }
-
-  .u-section-3 .u-text-3 {
-    width: auto;
-    margin-left: 20px;
-  }
-
-  .u-section-3 .u-text-4 {
-    width: auto;
-    margin-left: 20px;
-  }
-
-  .u-section-3 .u-text-5 {
-    width: auto;
-    margin-left: 20px;
-  }
-
-  .u-section-3 .u-text-6 {
-    width: auto;
-    margin-top: 4px;
-    margin-left: 20px;
-  }
-
   .u-section-3 .u-container-layout-2 {
     padding-left: 0;
     padding-right: 0;
-  }
-
-  .u-section-3 .u-icon-2 {
-    margin-left: 26px;
-  }
-
-  .u-section-3 .u-text-7 {
-    width: auto;
-    margin-left: 20px;
-  }
-
-  .u-section-3 .u-text-8 {
-    width: auto;
-    margin-right: -6px;
-    margin-left: 26px;
-  }
-
-  .u-section-3 .u-text-9 {
-    width: auto;
-    margin-left: 20px;
-  }
-
-  .u-section-3 .u-text-10 {
-    width: auto;
-    margin-left: 20px;
-  }
-
-  .u-section-3 .u-text-11 {
-    width: auto;
-    margin-left: 20px;
-  }
-
-  .u-section-3 .u-text-12 {
-    width: auto;
-    margin-top: 4px;
-    margin-left: 20px;
   }
 
   .u-section-3 .u-container-layout-3 {
@@ -632,54 +574,18 @@
     padding-right: 0;
   }
 
-  .u-section-3 .u-icon-3 {
-    margin-left: 26px;
+  .u-section-3 .u-btn-2 {
+    margin-left: calc(((100% - 540px) / 2));
   }
 
-  .u-section-3 .u-text-13 {
-    width: auto;
-    margin-left: 20px;
-  }
-
-  .u-section-3 .u-text-14 {
-    width: auto;
-    margin-right: -6px;
-    margin-left: 26px;
-  }
-
-  .u-section-3 .u-text-15 {
-    width: auto;
-    margin-left: 20px;
-  }
-
-  .u-section-3 .u-text-16 {
-    width: auto;
-    margin-left: 20px;
-  }
-
-  .u-section-3 .u-text-17 {
-    width: auto;
-    margin-left: 20px;
-  }
-
-  .u-section-3 .u-text-18 {
-    width: auto;
-    margin-top: 4px;
-    margin-left: 20px;
+  .u-section-3 .u-btn-3 {
+    margin-left: calc(((100% - 540px) / 2));
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 1291px;
-  }
-
-  .u-section-3 .u-btn-1 {
-    margin-top: 158px;
-  }
-
   .u-section-3 .u-list-1 {
-    margin-top: 22px;
+    width: 340px;
   }
 
   .u-section-3 .u-repeater-1 {
@@ -688,104 +594,22 @@
 
   .u-section-3 .u-text-1 {
     font-size: 1.4375rem;
-    margin-top: 13px;
-    margin-right: -47px;
-    margin-left: 15px;
-  }
-
-  .u-section-3 .u-text-2 {
-    margin-top: 7px;
-    margin-right: -15px;
-    margin-left: 15px;
-  }
-
-  .u-section-3 .u-text-3 {
-    margin-right: -7px;
-    margin-left: 7px;
-  }
-
-  .u-section-3 .u-text-4 {
-    margin-right: -7px;
-    margin-left: 7px;
-  }
-
-  .u-section-3 .u-text-5 {
-    margin-right: -7px;
-    margin-left: 7px;
-  }
-
-  .u-section-3 .u-text-6 {
-    margin-top: 0;
-    margin-right: -7px;
-    margin-left: 7px;
   }
 
   .u-section-3 .u-text-7 {
     font-size: 1.5rem;
-    margin-top: 13px;
-    margin-right: -47px;
-    margin-left: 15px;
-  }
-
-  .u-section-3 .u-text-8 {
-    margin-top: 7px;
-    margin-right: -15px;
-    margin-left: 15px;
-  }
-
-  .u-section-3 .u-text-9 {
-    margin-right: -7px;
-    margin-left: 7px;
-  }
-
-  .u-section-3 .u-text-10 {
-    margin-right: -7px;
-    margin-left: 7px;
-  }
-
-  .u-section-3 .u-text-11 {
-    margin-right: -7px;
-    margin-left: 7px;
-  }
-
-  .u-section-3 .u-text-12 {
-    margin-top: 0;
-    margin-right: -7px;
-    margin-left: 7px;
   }
 
   .u-section-3 .u-text-13 {
     font-size: 1.5rem;
-    margin-top: 13px;
-    margin-right: -47px;
-    margin-left: 15px;
   }
 
-  .u-section-3 .u-text-14 {
-    margin-top: 7px;
-    margin-right: -15px;
-    margin-left: 15px;
+  .u-section-3 .u-btn-2 {
+    margin-left: calc(((100% - 340px) / 2));
   }
 
-  .u-section-3 .u-text-15 {
-    margin-right: -7px;
-    margin-left: 7px;
-  }
-
-  .u-section-3 .u-text-16 {
-    margin-right: -7px;
-    margin-left: 7px;
-  }
-
-  .u-section-3 .u-text-17 {
-    margin-right: -7px;
-    margin-left: 7px;
-  }
-
-  .u-section-3 .u-text-18 {
-    margin-top: 0;
-    margin-right: -7px;
-    margin-left: 7px;
+  .u-section-3 .u-btn-3 {
+    margin-left: calc(((100% - 340px) / 2));
   }
 } .u-section-4 {
   background-image: none;
