--- a/nicepage.css
+++ b/nicepage.css
@@ -42548,6 +42548,78 @@ a.u-link.u-text-hover-grey-90:hover {
         }
 
         
+        
+        .u-custom-color-9,
+        .u-body.u-custom-color-9,
+        section.u-custom-color-9:before,
+        .u-custom-color-9 > .u-audio-main-layout-wrapper:before,
+        .u-custom-color-9 > .u-container-layout:before,
+        .u-custom-color-9 > .u-inner-container-layout:before,
+        .u-custom-color-9.u-sidenav:before,
+        .u-container-layout.u-container-layout.u-custom-color-9:before,
+        .u-table-alt-custom-color-9 tr:nth-child(even)
+        {
+            color: #111111;
+            background-color: #19ff1e;
+        }
+
+        .u-input.u-custom-color-9,
+        .u-field-input.u-custom-color-9,
+        .u-button-style.u-custom-color-9,
+        .u-button-style.u-custom-color-9[class*="u-border-"]
+        {
+            color: #111111 !important;
+            background-color: #19ff1e !important;
+        }
+
+        .u-button-style.u-custom-color-9:hover,
+        .u-button-style.u-custom-color-9[class*="u-border-"]:hover,
+        .u-button-style.u-custom-color-9:focus,
+        .u-button-style.u-custom-color-9[class*="u-border-"]:focus,
+        .u-button-style.u-button-style.u-custom-color-9:active,
+        .u-button-style.u-button-style.u-custom-color-9[class*="u-border-"]:active,
+        .u-button-style.u-button-style.u-custom-color-9.active,
+        .u-button-style.u-button-style.u-custom-color-9[class*="u-border-"].active,
+        li.active > .u-button-style.u-button-style.u-custom-color-9,
+        li.active > .u-button-style.u-button-style.u-custom-color-9[class*="u-border-"]
+        {
+            color: #111111 !important;
+            background-color: #00fc05 !important;
+        }
+
+        .u-hover-custom-color-9:hover,
+        .u-hover-custom-color-9[class*="u-border-"]:hover,
+        .u-hover-custom-color-9:focus,
+        .u-hover-custom-color-9[class*="u-border-"]:focus,
+        .u-active-custom-color-9.u-active.u-active,
+        .u-active-custom-color-9[class*="u-border-"].u-active.u-active,
+        a.u-button-style.u-hover-custom-color-9:hover,
+        a.u-button-style.u-hover-custom-color-9.hover,
+        a.u-button-style.u-hover-custom-color-9[class*="u-border-"]:hover,
+        a.u-button-style.u-hover-custom-color-9[class*="u-border-"].hover,
+        a.u-button-style:hover > .u-hover-custom-color-9,
+        a.u-button-style:hover > .u-hover-custom-color-9[class*="u-border-"],
+        a.u-button-style.u-hover-custom-color-9:focus,
+        a.u-button-style.u-hover-custom-color-9[class*="u-border-"]:focus,
+        a.u-button-style.u-button-style.u-active-custom-color-9:active,
+        a.u-button-style.u-button-style.u-active-custom-color-9[class*="u-border-"]:active,
+        a.u-button-style.u-button-style.u-active-custom-color-9.active,
+        a.u-button-style.u-button-style.u-active-custom-color-9[class*="u-border-"].active,
+        a.u-button-style.u-button-style.active > .u-active-custom-color-9,
+        a.u-button-style.u-button-style.active > .u-active-custom-color-9[class*="u-border-"],
+        li.active > a.u-button-style.u-button-style.u-active-custom-color-9,
+        li.active > a.u-button-style.u-button-style.u-active-custom-color-9[class*="u-border-"],
+        input.u-field-input.u-field-input.u-active-custom-color-9:checked
+        {
+            color: #111111 !important;
+            background-color: #19ff1e !important;
+        }
+
+        a.u-link.u-hover-custom-color-9:hover {
+            color: #19ff1e !important;
+        }
+
+        
 
         
         .u-border-custom-color-1,
@@ -42955,6 +43027,57 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-link.u-border-custom-color-8[class*="u-border-"]:hover
         {
             border-color: #00e605 !important;
+        }
+        
+        
+        .u-border-custom-color-9,
+        .u-border-custom-color-9.u-input,
+        .u-border-custom-color-9.u-field-input.u-field-input,
+        .u-separator-custom-color-9:after
+        {
+            border-color: #19ff1e;
+            stroke: #19ff1e;
+        }
+
+        .u-button-style.u-border-custom-color-9
+        {
+            border-color: #19ff1e !important;
+            color: #19ff1e !important;
+            background-color: transparent !important;
+        }
+
+        .u-button-style.u-border-custom-color-9:hover,
+        .u-button-style.u-border-custom-color-9:focus
+        {
+            border-color: transparent !important;
+            color: #00fc05 !important;
+            background-color: transparent !important;
+        }
+
+        .u-border-hover-custom-color-9:hover,
+        .u-border-hover-custom-color-9:focus,
+        .u-border-active-custom-color-9.u-active.u-active,
+        a.u-button-style.u-border-hover-custom-color-9:hover,
+        a.u-button-style:hover > .u-border-hover-custom-color-9,
+        a.u-button-style.u-border-hover-custom-color-9:focus,
+        a.u-button-style.u-button-style.u-border-active-custom-color-9:active,
+        a.u-button-style.u-button-style.u-border-active-custom-color-9.active,
+        a.u-button-style.u-button-style.active > .u-border-active-custom-color-9,
+        li.active > a.u-button-style.u-button-style.u-border-active-custom-color-9,
+        input.u-field-input.u-field-input.u-border-active-custom-color-9:checked
+        {
+            color: #19ff1e !important;
+            border-color: #19ff1e !important;
+        }
+
+        .u-link.u-border-custom-color-9[class*="u-border-"]
+        {
+            border-color: #19ff1e !important;
+        }
+
+        .u-link.u-border-custom-color-9[class*="u-border-"]:hover
+        {
+            border-color: #00fc05 !important;
         }
         
 
@@ -43516,6 +43639,76 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-link.u-text-hover-custom-color-8:hover
         {
             color: #00ff06 !important;
+        }
+        
+        
+        .u-text-custom-color-9,
+        .u-input.u-text-custom-color-9,
+        .u-input.u-text-custom-color-9[class*="u-border-"],
+        li.active > a.u-button-style.u-text-custom-color-9,
+        li.active > a.u-button-style.u-text-custom-color-9[class*="u-border-"],
+        a.u-button-style.u-text-custom-color-9,
+        a.u-button-style.u-text-custom-color-9[class*="u-border-"]
+        {
+            color: #19ff1e !important;
+        }
+
+        a.u-button-style.u-text-custom-color-9:hover,
+        a.u-button-style.u-text-custom-color-9[class*="u-border-"]:hover,
+        a.u-button-style.u-text-custom-color-9:focus,
+        a.u-button-style.u-text-custom-color-9[class*="u-border-"]:focus,
+        a.u-button-style.u-button-style.u-text-custom-color-9:active,
+        a.u-button-style.u-button-style.u-text-custom-color-9[class*="u-border-"]:active,
+        a.u-button-style.u-button-style.u-text-custom-color-9.active,
+        a.u-button-style.u-button-style.u-text-custom-color-9[class*="u-border-"].active
+        {
+            color: #00fc05 !important;
+        }
+
+        a.u-button-style:hover > .u-text-hover-custom-color-9,
+        a.u-button-style:hover > .u-text-hover-custom-color-9[class*="u-border-"],
+        a.u-button-style.u-button-style.u-text-hover-custom-color-9:hover,
+        a.u-button-style.u-button-style.u-text-hover-custom-color-9[class*="u-border-"]:hover,
+        a.u-button-style.u-button-style.u-button-style.u-text-hover-custom-color-9.active,
+        a.u-button-style.u-button-style.u-button-style.u-text-hover-custom-color-9[class*="u-border-"].active,
+        a.u-button-style.u-button-style.u-button-style.u-text-hover-custom-color-9:active,
+        a.u-button-style.u-button-style.u-button-style.u-text-hover-custom-color-9[class*="u-border-"]:active,
+        a.u-button-style.u-button-style.u-text-hover-custom-color-9:focus,
+        a.u-button-style.u-button-style.u-text-hover-custom-color-9[class*="u-border-"]:focus,
+        a.u-button-style.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-9:active,
+        a.u-button-style.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-9[class*="u-border-"]:active,
+        a.u-button-style.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-9.active,
+        a.u-button-style.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-9[class*="u-border-"].active,
+        a.u-button-style.u-button-style.active > .u-text-active-custom-color-9,
+        a.u-button-style.u-button-style.active > .u-text-active-custom-color-9[class*="u-border-"],
+        :not(.level-2) > .u-nav > .u-nav-item > a.u-nav-link.u-text-hover-custom-color-9:hover,
+        :not(.level-2) > .u-nav > .u-nav-item > a.u-nav-link.u-nav-link.u-text-active-custom-color-9.active,
+        .u-text-hover-custom-color-9.u-language-url:hover,
+        .u-text-hover-custom-color-9 .u-language-url:hover,
+        .u-text-hover-custom-color-9.u-carousel-control:hover,
+        .u-popupmenu-items.u-text-hover-custom-color-9 .u-nav-link:hover,
+        .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-9 .u-nav-link.active
+        {
+            color: #19ff1e !important;
+        }
+
+        .u-text-custom-color-9 .u-svg-link,
+        .u-text-hover-custom-color-9:hover .u-svg-link,
+        .u-button-style:hover > .u-text-hover-custom-color-9 .u-svg-link,
+        .u-button-style.u-button-style.active > .u-text-active-custom-color-9 .u-svg-link,
+        .u-text-hover-custom-color-9:focus .u-svg-link
+        {
+            fill: #19ff1e;
+        }
+
+        .u-link.u-text-custom-color-9:hover
+        {
+            color: #00fc05 !important;
+        }
+
+        a.u-link.u-text-hover-custom-color-9:hover
+        {
+            color: #19ff1e !important;
         }
 
         .u-body
