--- a/Home.css
+++ b/Home.css
@@ -30,37 +30,8 @@
   --radius: 50px;
   box-shadow: -2px 2px 8px 4px rgba(0,0,0,0.4);
   background-image: none;
-  margin: 11px auto 0;
+  margin: 11px auto 60px;
   padding: 21px 30px 22px 29px;
-}
-
-.u-section-1 .u-image-3 {
-  width: 87px;
-  height: 87px;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  transition-duration: 0.5s;
-  --radius: 50px;
-  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px);
-  margin: 138px auto 0 -33px;
-}
-
-.u-section-1 .u-image-4 {
-  width: 94px;
-  height: 94px;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  transition-duration: 0.5s;
-  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px);
-  margin: -88px auto 0 66px;
-}
-
-.u-section-1 .u-image-5 {
-  width: 104px;
-  height: 104px;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  transition-duration: 0.5s;
-  --radius: 50px;
-  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px);
-  margin: -99px auto 7px 171px;
 }
 
 @media (max-width: 1199px) {
@@ -134,56 +105,6 @@
 
 .u-section-1 .u-btn-1.u-btn-1.u-btn-1.hover {
   transform: scale(1.05) !important;
-}
-
-.u-section-1 .u-image-3,
-.u-section-1 .u-image-3:before,
-.u-section-1 .u-image-3 > .u-container-layout:before {
-  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
-}
-
-.u-section-1 .u-image-3.u-image-3.u-image-3:hover {
-  transform: scale(1.1) translateX(0px) translateY(0px) !important;
-}
-
-.u-section-1 .u-image-3.u-image-3.u-image-3.hover {
-  transform: scale(1.1) translateX(0px) translateY(0px) !important;
-}
-
-.u-container-layout:hover > .u-section-1 .u-image-3 {
-  opacity: 1 !important;
-}
-
-.u-container-layout.hover > .u-section-1 .u-image-3 {
-  opacity: 1 !important;
-}
-
-.u-section-1 .u-image-4,
-.u-section-1 .u-image-4:before,
-.u-section-1 .u-image-4 > .u-container-layout:before {
-  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
-}
-
-.u-section-1 .u-image-4.u-image-4.u-image-4:hover {
-  transform: scale(1.04) translateX(0px) translateY(0px) !important;
-}
-
-.u-section-1 .u-image-4.u-image-4.u-image-4.hover {
-  transform: scale(1.04) translateX(0px) translateY(0px) !important;
-}
-
-.u-section-1 .u-image-5,
-.u-section-1 .u-image-5:before,
-.u-section-1 .u-image-5 > .u-container-layout:before {
-  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
-}
-
-.u-section-1 .u-image-5.u-image-5.u-image-5:hover {
-  transform: scale(1.04) translateX(0px) translateY(0px) !important;
-}
-
-.u-section-1 .u-image-5.u-image-5.u-image-5.hover {
-  transform: scale(1.04) translateX(0px) translateY(0px) !important;
 }
 
 .u-section-1 .u-image-2,
