--- a/Home.css
+++ b/Home.css
@@ -534,28 +534,28 @@
   }
 } .u-section-4 {
   background-image: none;
-  min-height: 518px;
+  min-height: 521px;
 }
 
 .u-section-4 .u-text-1 {
   font-family: Splatfont;
-  margin: 19px auto 0;
+  margin: 23px 279px 0 calc(((100% - 1920px) / 2)  + 1556px);
 }
 
 .u-section-4 .u-text-2 {
   font-family: Splatfont;
-  margin: -36px calc(((100% - 1920px) / 2)  + 1265px) 0 calc(((100% - 1920px) / 2)  + -67px);
+  margin: -39px calc(((100% - 1920px) / 2)  + 1265px) 0 calc(((100% - 1920px) / 2)  + -67px);
 }
 
 .u-section-4 .u-text-3 {
   font-family: Splatfont;
-  margin: -36px 229px 0 calc(((100% - 1920px) / 2)  + 1556px);
+  margin: -39px auto 0;
 }
 
 .u-section-4 .u-gallery-1 {
   height: 360px;
   width: 642px;
-  margin: 15px calc(((100% - 1920px) / 2)  + -24px) 0 auto;
+  margin: 20px calc(((100% - 1920px) / 2)  + -24px) 0 auto;
 }
 
 .u-section-4 .u-carousel-indicators-1 {
@@ -714,17 +714,6 @@
   padding: 30px;
 }
 
-.u-section-4 .u-carousel-item-12 {
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-4 .u-over-slide-12 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 30px;
-}
-
 .u-section-4 .u-carousel-control-3 {
   position: absolute;
   left: 10px;
@@ -752,6 +741,17 @@
   bottom: 10px;
   width: auto;
   height: auto;
+}
+
+.u-section-4 .u-carousel-item-12 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-4 .u-over-slide-12 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
 }
 
 .u-section-4 .u-carousel-item-13 {
@@ -910,8 +910,6 @@
 
 .u-section-4 .u-carousel-item-27 {
   margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .u-section-4 .u-over-slide-27 {
@@ -924,15 +922,6 @@
 }
 
 .u-section-4 .u-over-slide-28 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 30px;
-}
-
-.u-section-4 .u-carousel-item-29 {
-  margin-right: 0;
-}
-
-.u-section-4 .u-over-slide-29 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 30px;
 }
@@ -956,7 +945,7 @@
 .u-section-4 .u-shape-1 {
   height: 15px;
   margin-top: 41px;
-  margin-bottom: 21px;
+  margin-bottom: 22px;
 }
 
 @media (max-width: 1199px) {
@@ -966,25 +955,26 @@
 
   .u-section-4 .u-text-1 {
     width: auto;
-    margin-top: 31px;
+    margin-top: 970px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-4 .u-text-2 {
     width: 232px;
-    margin-top: -492px;
+    margin-top: -939px;
     margin-left: auto;
     margin-right: auto;
   }
 
   .u-section-4 .u-text-3 {
     width: auto;
-    margin-top: 860px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 373px;
+    margin-left: calc(((100% - 940px) / 2)  + 413px);
   }
 
   .u-section-4 .u-gallery-1 {
-    margin-top: 16px;
+    margin-top: 463px;
     margin-right: auto;
   }
 
@@ -999,11 +989,21 @@
 
   .u-section-4 .u-shape-1 {
     margin-top: 935px;
-    margin-bottom: -422px;
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-text-3 {
+    margin-left: calc(((100% - 720px) / 2)  + 316px);
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-4 .u-text-3 {
+    margin-left: calc(((100% - 540px) / 2)  + 237px);
+  }
+
   .u-section-4 .u-gallery-1 {
     width: 540px;
   }
@@ -1023,25 +1023,25 @@
   }
 
   .u-section-4 .u-text-1 {
-    margin-top: 330px;
+    margin-top: 655px;
   }
 
   .u-section-4 .u-text-2 {
-    margin-top: -325px;
+    margin-top: -624px;
   }
 
   .u-section-4 .u-text-3 {
-    margin-top: 571px;
+    margin-top: 246px;
+    margin-left: calc(((100% - 340px) / 2)  + 149px);
   }
 
   .u-section-4 .u-gallery-1 {
     height: 245px;
     width: 417px;
-    margin-top: 6px;
+    margin-top: 305px;
   }
 
   .u-section-4 .u-gallery-2 {
-    height: 298px;
     width: 417px;
     margin-top: -601px;
   }
