--- a/Single-Player.css
+++ b/Single-Player.css
@@ -432,12 +432,12 @@
   }
 } .u-section-6 {
   background-image: none;
-  min-height: 1194px;
+  min-height: 1226px;
 }
 
 .u-section-6 .u-layout-wrap-1 {
   width: 1803px;
-  margin: 0 auto;
+  margin: 33px auto 0;
 }
 
 .u-section-6 .u-layout-cell-1 {
@@ -518,22 +518,23 @@
   font-size: 1.875rem;
   transition-duration: 0.5s;
   width: 810px;
-  margin: 33px auto 0;
+  margin: 32px auto 0;
 }
 
 .u-section-6 .u-shape-1 {
   height: 15px;
   margin-top: 32px;
-  margin-bottom: 32px;
+  margin-bottom: 33px;
 }
 
 @media (max-width: 1199px) {
    .u-section-6 {
-    min-height: 692px;
+    min-height: 221px;
   }
 
   .u-section-6 .u-layout-wrap-1 {
     width: 940px;
+    margin-left: calc(((100% - 940px) / 2));
   }
 
   .u-section-6 .u-layout-cell-1 {
@@ -568,12 +569,9 @@
 }
 
 @media (max-width: 991px) {
-   .u-section-6 {
-    min-height: 564px;
-  }
-
   .u-section-6 .u-layout-wrap-1 {
     width: 720px;
+    margin-left: calc(((100% - 720px) / 2));
   }
 
   .u-section-6 .u-layout-cell-1 {
@@ -599,11 +597,12 @@
 
 @media (max-width: 767px) {
    .u-section-6 {
-    min-height: 975px;
+    min-height: 1043px;
   }
 
   .u-section-6 .u-layout-wrap-1 {
     width: 540px;
+    margin-left: calc(((100% - 540px) / 2));
   }
 
   .u-section-6 .u-container-layout-1 {
@@ -637,11 +636,12 @@
 
 @media (max-width: 575px) {
    .u-section-6 {
-    min-height: 741px;
+    min-height: 575px;
   }
 
   .u-section-6 .u-layout-wrap-1 {
     width: 340px;
+    margin-left: calc(((100% - 340px) / 2));
   }
 
   .u-section-6 .u-text-1 {
@@ -680,6 +680,20 @@
   transform: scale(1.03) translateX(0px) translateY(0px) !important;
 }
 
+.u-section-6 .u-text-3,
+.u-section-6 .u-text-3:before,
+.u-section-6 .u-text-3 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
+}
+
+.u-section-6 .u-text-3.u-text-3.u-text-3:hover {
+  transform: scale(1.03) translateX(0px) translateY(0px) !important;
+}
+
+.u-section-6 .u-text-3.u-text-3.u-text-3.hover {
+  transform: scale(1.03) translateX(0px) translateY(0px) !important;
+}
+
 .u-section-6 .u-text-1,
 .u-section-6 .u-text-1:before,
 .u-section-6 .u-text-1 > .u-container-layout:before {
@@ -706,28 +720,14 @@
 
 .u-section-6 .u-text-2.u-text-2.u-text-2.hover {
   transform: scale(1.03) translateX(0px) translateY(0px) !important;
-}
-
-.u-section-6 .u-text-3,
-.u-section-6 .u-text-3:before,
-.u-section-6 .u-text-3 > .u-container-layout:before {
-  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
-}
-
-.u-section-6 .u-text-3.u-text-3.u-text-3:hover {
-  transform: scale(1.03) translateX(0px) translateY(0px) !important;
-}
-
-.u-section-6 .u-text-3.u-text-3.u-text-3.hover {
-  transform: scale(1.03) translateX(0px) translateY(0px) !important;
 } .u-section-7 {
   background-image: none;
-  min-height: 476px;
+  min-height: 472px;
 }
 
 .u-section-7 .u-accordion-1 {
   width: 1920px;
-  margin: 49px calc(((100% - 1920px) / 2)  + -16px) 0 auto;
+  margin: 11px auto 0;
 }
 
 .u-section-7 .u-accordion-link-1 {
@@ -784,28 +784,25 @@
 
 .u-section-7 .u-shape-1 {
   height: 15px;
-  margin-top: 34px;
-  margin-bottom: 16px;
+  margin-top: 36px;
+  margin-bottom: 11px;
 }
 
 @media (max-width: 1199px) {
   .u-section-7 .u-accordion-1 {
     width: 940px;
-    margin-right: calc(((100% - 940px) / 2));
   }
 }
 
 @media (max-width: 991px) {
   .u-section-7 .u-accordion-1 {
     width: 720px;
-    margin-right: calc(((100% - 720px) / 2));
   }
 }
 
 @media (max-width: 767px) {
   .u-section-7 .u-accordion-1 {
     width: 540px;
-    margin-right: calc(((100% - 540px) / 2));
   }
 
   .u-section-7 .u-container-layout-1 {
@@ -822,19 +819,17 @@
 @media (max-width: 575px) {
   .u-section-7 .u-accordion-1 {
     width: 340px;
-    margin-right: calc(((100% - 340px) / 2));
   }
 } .u-section-8 {
   background-image: none;
 }
 
 .u-section-8 .u-sheet-1 {
-  min-height: 295px;
+  min-height: 288px;
 }
 
 .u-section-8 .u-list-1 {
-  margin-top: 22px;
-  margin-bottom: 22px;
+  margin: 20px 0 17px;
 }
 
 .u-section-8 .u-repeater-1 {
@@ -946,6 +941,11 @@
 }
 
 @media (max-width: 1199px) {
+  .u-section-8 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
   .u-section-8 .u-repeater-1 {
     min-height: 119px;
   }
